--- a/TelegramDigest.Web/Pages/Digests/Queue.cshtml
+++ b/TelegramDigest.Web/Pages/Digests/Queue.cshtml
@@ -44,7 +44,8 @@
                                     else
                                     {
                                         <button disabled class="btn btn-sm btn-warning">
-                                            <i class="bi bi-pause-circle me-1"></i>Cancellation Requested
+                                            <i class="bi bi-pause-circle me-1"></i>Cancellation
+                                            Requested
                                         </button>
                                     }
                                 </div>
@@ -93,8 +94,8 @@
     </div>
 
     <div class="mt-4">
-        <a asp-page="/Digests/Index" class="btn btn-primary">
-            <i class="bi bi-arrow-left me-1"></i>Back to Digests
+        <a href="javascript:history.back()" class="btn btn-primary">
+            <i class="bi bi-arrow-left me-1"></i>Back
         </a>
         <button class="btn btn-secondary ms-2" onclick="location.reload();">
             <i class="bi bi-arrow-clockwise me-1"></i>Refresh
