--- a/TelegramDigest.Web/Pages/Error.cshtml
+++ b/TelegramDigest.Web/Pages/Error.cshtml
@@ -16,8 +16,8 @@
         }
 
         <div class="mb-4">
-            <img src="~/images/error.svg" alt="Error illustration" class="error-image" 
-                 style="max-width: 300px; margin: 2rem 0;" />
+            <img src="~/images/error.svg" alt="Error illustration" class="error-image"
+                 style="max-width: 300px; margin: 2rem 0;"/>
         </div>
 
         @if (Model.ShowException)
@@ -46,7 +46,7 @@
                 <i class="bi bi-house-door"></i> Return Home
             </a>
             <button onclick="history.back()" class="btn btn-outline-secondary ms-2">
-                <i class="bi bi-arrow-left"></i> Go Back
+                <i class="bi bi-arrow-left"></i> Back
             </button>
         </div>
     </div>
