use feed title in digest page, minor edit in DigestService.cs

--- a/TelegramDigest.Web/Pages/Digest/Index.cshtml
+++ b/TelegramDigest.Web/Pages/Digest/Index.cshtml
@@ -54,7 +54,7 @@ else
         <div class="card mb-3">
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-start">
-                    <h5 class="card-title">@post.FeedUrl</h5>
+                    <h5 class="card-title">@post.FeedTitle</h5>
                     <span class="badge bg-primary">Importance: @post.Importance</span>
                 </div>
                 <p class="card-text">@post.Summary</p>
