--- a/TelegramDigest.Web/Pages/Shared/_Layout.cshtml
+++ b/TelegramDigest.Web/Pages/Shared/_Layout.cshtml
@@ -10,24 +10,41 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+    <nav
+        class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
         <div class="container">
             <a class="navbar-brand" asp-area="" asp-page="/Index">Telegram Digest</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
+            <a class="navbar-brand" href="/rss">
+                <i class="bi bi-rss"></i>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target=".navbar-collapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <partial name="_NavMenu"/>
             </div>
-            <a class="navbar-brand" href="/rss">
-                <i class="bi bi-rss"></i>
-            </a>
+            <div class="d-flex align-items-center ms-3">
+                @if (User.Identity?.IsAuthenticated ?? false)
+                {
+                    <span class="text-light me-2">
+                        <i class="bi bi-person-circle"></i>
+                        @(User.FindFirst(System.Security.Claims.ClaimTypes.Email)?.Value
+                        ?? "Failed to show user email")
+                    </span>
+                    <a class="btn btn-outline-light btn-sm" href="/Auth/Logout">Logout</a>
+                }
+                else
+                {
+                    <a class="btn btn-outline-light btn-sm" href="/Auth/Login">Login</a>
+                }
+            </div>
         </div>
     </nav>
 </header>
 
 <div class="container content-container">
-    <partial name="_ErrorsPartial" />
+    <partial name="_ErrorsPartial"/>
     @RenderBody()
 </div>
 
